--- a/test/single-dc-l3ls/group_vars/FABRIC.yml
+++ b/test/single-dc-l3ls/group_vars/FABRIC.yml
@@ -1,25 +1,25 @@
 ---
-# Ansible connectivity definitions
-# eAPI connectivity via HTTPS is specified (as opposed to CLI via SSH)
-ansible_connection: ansible.netcommon.httpapi
-# Specifies that we are indeed using Arista EOS
-ansible_network_os: arista.eos.eos
-# This user/password must exist on the switches to enable Ansible access
-ansible_user: ansible
-ansible_password: ansible
-# User escalation (to enter enable mode)
-ansible_become: true
-ansible_become_method: enable
-# Use SSL (HTTPS)
-ansible_httpapi_use_ssl: true
-# Do not try to validate certs
-ansible_httpapi_validate_certs: false
+# # Ansible connectivity definitions
+# # eAPI connectivity via HTTPS is specified (as opposed to CLI via SSH)
+# ansible_connection: ansible.netcommon.httpapi
+# # Specifies that we are indeed using Arista EOS
+# ansible_network_os: arista.eos.eos
+# # This user/password must exist on the switches to enable Ansible access
+# ansible_user: ansible
+# ansible_password: ansible
+# # User escalation (to enter enable mode)
+# ansible_become: true
+# ansible_become_method: enable
+# # Use SSL (HTTPS)
+# ansible_httpapi_use_ssl: true
+# # Do not try to validate certs
+# ansible_httpapi_validate_certs: false
 
 # Common AVD group variables
 fabric_name: FABRIC
 
 # Define underlay and overlay routing protocol to be used
-underlay_routing_protocol: ebgp
+underlay_routing_protocol: ospf
 overlay_routing_protocol: ebgp
 
 # Local users
@@ -36,19 +36,19 @@ local_users:
     no_password: true
 
 # BGP peer groups passwords
-bgp_peer_groups:
-  # all passwords set to "arista"
-  evpn_overlay_peers:
-    password: Q4fqtbqcZ7oQuKfuWtNGRQ==
-  ipv4_underlay_peers:
-    password: 7x4B4rnJhZB438m9+BrBfQ==
-  mlag_ipv4_underlay_peer:
-    password: 4b21pAdCvWeAqpcKDFMdWw==
+# bgp_peer_groups:
+#   # all passwords set to "arista"
+#   evpn_overlay_peers:
+#     password: Q4fqtbqcZ7oQuKfuWtNGRQ==
+#   ipv4_underlay_peers:
+#     password: 7x4B4rnJhZB438m9+BrBfQ==
+#   mlag_ipv4_underlay_peer:
+#     password: 4b21pAdCvWeAqpcKDFMdWw==
 
 # P2P interfaces MTU, includes VLANs 4093 and 4094 that are over peer-link
 # If you're running vEOS-lab or cEOS, you should use MTU of 1500 instead as shown in the following line
-# p2p_uplinks_mtu: 9214
-p2p_uplinks_mtu: 1500
+p2p_uplinks_mtu: 9216
+#p2p_uplinks_mtu: 1500
 
 # Set default uplink, downlink, and MLAG interfaces based on node type
 default_interfaces:
@@ -58,12 +58,12 @@ default_interfaces:
     downlink_interfaces: [ Ethernet1-8 ]
   - types: [ l3leaf ]
     platforms: [ default ]
-    uplink_interfaces: [ Ethernet1-2 ]
-    mlag_interfaces: [ Ethernet3-4 ]
-    downlink_interfaces: [ Ethernet8 ]
+    uplink_interfaces: [ Ethernet44-46 ]
+    mlag_interfaces: [ Ethernet47-48 ]
+    downlink_interfaces: [ Ethernet1-43 ]
   - types: [ l2leaf ]
     platforms: [ default ]
-    uplink_interfaces: [ Ethernet1-2 ]
+    uplink_interfaces: [ Ethernet47-48 ]
 
 # CloudVision Portal definitions
 cvp_instance_ips:
@@ -72,15 +72,15 @@ terminattr_smashexcludes: "ale,flexCounter,hardware,kni,pulse,strata"
 terminattr_ingestexclude: "/Sysdb/cell/1/agent,/Sysdb/cell/2/agent"
 terminattr_disable_aaa: true
 
-# DNS Server
-name_servers:
-  - 192.168.1.1
+# # DNS Server
+# name_servers:
+#   - 192.168.1.1
 
-# NTP Servers IP or DNS name, first NTP server will be prefered, and sourced from Management VRF
-custom_structured_configuration_ntp:
-  local_interface:
-    name: Management1
-    vrf: MGMT
-  servers:
-    - name: 0.pool.ntp.org
-      vrf: MGMT
+# # NTP Servers IP or DNS name, first NTP server will be prefered, and sourced from Management VRF
+# custom_structured_configuration_ntp:
+#   local_interface:
+#     name: Management1
+#     vrf: MGMT
+#   servers:
+#     - name: 0.pool.ntp.org
+#       vrf: MGMT
