--- a/test/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
+++ b/test/single-dc-l3ls/intended/configs/dc1-leaf2a.cfg
@@ -11,10 +11,6 @@ transceiver qsfp default-mode 4x10G
 service routing protocols model multi-agent
 !
 hostname dc1-leaf2a
-ip name-server vrf MGMT 192.168.1.1
-!
-ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 0.pool.ntp.org
 !
 spanning-tree mode mstp
 no spanning-tree vlan-id 4093-4094
@@ -66,14 +62,6 @@ vrf instance VRF10
 !
 vrf instance VRF11
 !
-interface Port-Channel3
-   description MLAG_PEER_dc1-leaf2b_Po3
-   no shutdown
-   switchport
-   switchport mode trunk
-   switchport trunk group LEAF_PEER_L3
-   switchport trunk group MLAG
-!
 interface Port-Channel5
    description dc1-leaf2-server1_PortChannel dc1-leaf2-server1
    no shutdown
@@ -85,36 +73,20 @@ interface Port-Channel5
    spanning-tree portfast
 !
 interface Port-Channel8
-   description DC1-LEAF2C_Po1
+   description DC1-LEAF2C_Po47
    no shutdown
    switchport
    switchport trunk allowed vlan 11-12,21-22,3401-3402
    switchport mode trunk
    mlag 8
 !
-interface Ethernet1
-   description P2P_LINK_TO_DC1-SPINE1_Ethernet3
+interface Port-Channel47
+   description MLAG_PEER_dc1-leaf2b_Po47
    no shutdown
-   mtu 1500
-   no switchport
-   ip address 10.255.255.9/31
-!
-interface Ethernet2
-   description P2P_LINK_TO_DC1-SPINE2_Ethernet3
-   no shutdown
-   mtu 1500
-   no switchport
-   ip address 10.255.255.11/31
-!
-interface Ethernet3
-   description MLAG_PEER_dc1-leaf2b_Ethernet3
-   no shutdown
-   channel-group 3 mode active
-!
-interface Ethernet4
-   description MLAG_PEER_dc1-leaf2b_Ethernet4
-   no shutdown
-   channel-group 3 mode active
+   switchport
+   switchport mode trunk
+   switchport trunk group LEAF_PEER_L3
+   switchport trunk group MLAG
 !
 interface Ethernet5
    description dc1-leaf2-server1_PCI1
@@ -122,19 +94,49 @@ interface Ethernet5
    channel-group 5 mode active
 !
 interface Ethernet8
-   description DC1-LEAF2C_Ethernet1
+   description DC1-LEAF2C_Ethernet47
    no shutdown
    channel-group 8 mode active
+!
+interface Ethernet44
+   description P2P_LINK_TO_DC1-SPINE1_Ethernet3
+   no shutdown
+   mtu 9216
+   no switchport
+   ip address 10.255.255.9/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
+!
+interface Ethernet45
+   description P2P_LINK_TO_DC1-SPINE2_Ethernet3
+   no shutdown
+   mtu 9216
+   no switchport
+   ip address 10.255.255.11/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
+!
+interface Ethernet47
+   description MLAG_PEER_dc1-leaf2b_Ethernet47
+   no shutdown
+   channel-group 47 mode active
+!
+interface Ethernet48
+   description MLAG_PEER_dc1-leaf2b_Ethernet48
+   no shutdown
+   channel-group 47 mode active
 !
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
    ip address 10.255.0.5/32
+   ip ospf area 0.0.0.0
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
    ip address 10.255.1.5/32
+   ip ospf area 0.0.0.0
 !
 interface Loopback10
    description VRF10_VTEP_DIAGNOSTICS
@@ -181,27 +183,29 @@ interface Vlan22
 interface Vlan3009
    description MLAG_PEER_L3_iBGP: vrf VRF10
    no shutdown
-   mtu 1500
+   mtu 9216
    vrf VRF10
    ip address 10.255.1.100/31
 !
 interface Vlan3010
    description MLAG_PEER_L3_iBGP: vrf VRF11
    no shutdown
-   mtu 1500
+   mtu 9216
    vrf VRF11
    ip address 10.255.1.100/31
 !
 interface Vlan4093
    description MLAG_PEER_L3_PEERING
    no shutdown
-   mtu 1500
+   mtu 9216
    ip address 10.255.1.100/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 interface Vlan4094
    description MLAG_PEER
    no shutdown
-   mtu 1500
+   mtu 9216
    no autostate
    ip address 10.255.1.68/31
 !
@@ -229,22 +233,15 @@ no ip routing vrf MGMT
 ip routing vrf VRF10
 ip routing vrf VRF11
 !
-ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 10.255.0.0/27 eq 32
-   seq 20 permit 10.255.1.0/27 eq 32
-!
 mlag configuration
    domain-id DC1_L3_LEAF2
    local-interface Vlan4094
    peer-address 10.255.1.69
-   peer-link Port-Channel3
+   peer-link Port-Channel47
    reload-delay mlag 300
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
-!
-route-map RM-CONN-2-BGP permit 10
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 route-map RM-MLAG-PEER-IN permit 10
    description Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
@@ -261,18 +258,12 @@ router bgp 65102
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
    neighbor EVPN-OVERLAY-PEERS ebgp-multihop 3
-   neighbor EVPN-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
-   neighbor IPv4-UNDERLAY-PEERS peer group
-   neighbor IPv4-UNDERLAY-PEERS password 7 7x4B4rnJhZB438m9+BrBfQ==
-   neighbor IPv4-UNDERLAY-PEERS send-community
-   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
    neighbor MLAG-IPv4-UNDERLAY-PEER remote-as 65102
    neighbor MLAG-IPv4-UNDERLAY-PEER next-hop-self
    neighbor MLAG-IPv4-UNDERLAY-PEER description dc1-leaf2b
-   neighbor MLAG-IPv4-UNDERLAY-PEER password 7 4b21pAdCvWeAqpcKDFMdWw==
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
@@ -282,15 +273,6 @@ router bgp 65102
    neighbor 10.255.0.2 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.2 remote-as 65100
    neighbor 10.255.0.2 description dc1-spine2
-   neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
-   neighbor 10.255.1.101 description dc1-leaf2b
-   neighbor 10.255.255.8 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.8 remote-as 65100
-   neighbor 10.255.255.8 description dc1-spine1_Ethernet3
-   neighbor 10.255.255.10 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.10 remote-as 65100
-   neighbor 10.255.255.10 description dc1-spine2_Ethernet3
-   redistribute connected route-map RM-CONN-2-BGP
    !
    vlan 11
       rd 10.255.0.5:10011
@@ -327,7 +309,6 @@ router bgp 65102
    !
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
-      neighbor IPv4-UNDERLAY-PEERS activate
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
    !
    vrf VRF10
@@ -345,6 +326,14 @@ router bgp 65102
       router-id 10.255.0.5
       neighbor 10.255.1.101 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
+!
+router ospf 100
+   router-id 10.255.0.5
+   passive-interface default
+   no passive-interface Ethernet44
+   no passive-interface Ethernet45
+   no passive-interface Vlan4093
+   max-lsa 12000
 !
 management api http-commands
    protocol https
