--- a/test/single-dc-l3ls/intended/configs/dc1-spine1.cfg
+++ b/test/single-dc-l3ls/intended/configs/dc1-spine1.cfg
@@ -11,10 +11,6 @@ transceiver qsfp default-mode 4x10G
 service routing protocols model multi-agent
 !
 hostname dc1-spine1
-ip name-server vrf MGMT 192.168.1.1
-!
-ntp local-interface vrf MGMT Management1
-ntp server vrf MGMT 0.pool.ntp.org
 !
 spanning-tree mode none
 !
@@ -27,37 +23,46 @@ username ansible privilege 15 role network-admin secret sha512 $6$7u4j1rkb3VELgc
 vrf instance MGMT
 !
 interface Ethernet1
-   description P2P_LINK_TO_DC1-LEAF1A_Ethernet1
+   description P2P_LINK_TO_DC1-LEAF1A_Ethernet44
    no shutdown
-   mtu 1500
+   mtu 9216
    no switchport
    ip address 10.255.255.0/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 interface Ethernet2
-   description P2P_LINK_TO_DC1-LEAF1B_Ethernet1
+   description P2P_LINK_TO_DC1-LEAF1B_Ethernet44
    no shutdown
-   mtu 1500
+   mtu 9216
    no switchport
    ip address 10.255.255.4/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 interface Ethernet3
-   description P2P_LINK_TO_DC1-LEAF2A_Ethernet1
+   description P2P_LINK_TO_DC1-LEAF2A_Ethernet44
    no shutdown
-   mtu 1500
+   mtu 9216
    no switchport
    ip address 10.255.255.8/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 interface Ethernet4
-   description P2P_LINK_TO_DC1-LEAF2B_Ethernet1
+   description P2P_LINK_TO_DC1-LEAF2B_Ethernet44
    no shutdown
-   mtu 1500
+   mtu 9216
    no switchport
    ip address 10.255.255.12/31
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
    ip address 10.255.0.1/32
+   ip ospf area 0.0.0.0
 !
 interface Management1
    description oob_management
@@ -68,13 +73,7 @@ interface Management1
 ip routing
 no ip routing vrf MGMT
 !
-ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
-   seq 10 permit 10.255.0.0/27 eq 32
-!
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
-!
-route-map RM-CONN-2-BGP permit 10
-   match ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
@@ -88,13 +87,8 @@ router bgp 65100
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
    neighbor EVPN-OVERLAY-PEERS ebgp-multihop 3
-   neighbor EVPN-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
-   neighbor IPv4-UNDERLAY-PEERS peer group
-   neighbor IPv4-UNDERLAY-PEERS password 7 7x4B4rnJhZB438m9+BrBfQ==
-   neighbor IPv4-UNDERLAY-PEERS send-community
-   neighbor IPv4-UNDERLAY-PEERS maximum-routes 12000
    neighbor 10.255.0.3 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.3 remote-as 65101
    neighbor 10.255.0.3 description dc1-leaf1a
@@ -107,26 +101,21 @@ router bgp 65100
    neighbor 10.255.0.6 peer group EVPN-OVERLAY-PEERS
    neighbor 10.255.0.6 remote-as 65102
    neighbor 10.255.0.6 description dc1-leaf2b
-   neighbor 10.255.255.1 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.1 remote-as 65101
-   neighbor 10.255.255.1 description dc1-leaf1a_Ethernet1
-   neighbor 10.255.255.5 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.5 remote-as 65101
-   neighbor 10.255.255.5 description dc1-leaf1b_Ethernet1
-   neighbor 10.255.255.9 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.9 remote-as 65102
-   neighbor 10.255.255.9 description dc1-leaf2a_Ethernet1
-   neighbor 10.255.255.13 peer group IPv4-UNDERLAY-PEERS
-   neighbor 10.255.255.13 remote-as 65102
-   neighbor 10.255.255.13 description dc1-leaf2b_Ethernet1
-   redistribute connected route-map RM-CONN-2-BGP
    !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
    !
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
-      neighbor IPv4-UNDERLAY-PEERS activate
+!
+router ospf 100
+   router-id 10.255.0.1
+   passive-interface default
+   no passive-interface Ethernet1
+   no passive-interface Ethernet2
+   no passive-interface Ethernet3
+   no passive-interface Ethernet4
+   max-lsa 12000
 !
 management api http-commands
    protocol https
