--- a/test/single-dc-l3ls/intended/structured_configs/dc1-leaf1a.yml
+++ b/test/single-dc-l3ls/intended/structured_configs/dc1-leaf1a.yml
@@ -2,7 +2,7 @@ hostname: dc1-leaf1a
 is_deployed: true
 router_bgp:
   as: '65101'
-  router_id: 10.255.0.3
+  router_id: 10.255.1.13
   bgp:
     default:
       ipv4_unicast: false
@@ -10,72 +10,35 @@ router_bgp:
     paths: 4
     ecmp: 4
   peer_groups:
+  - name: EVPN-OVERLAY-PEERS
+    type: evpn
+    update_source: Loopback0
+    bfd: true
+    send_community: all
+    maximum_routes: 0
+    ebgp_multihop: 3
   - name: MLAG-IPv4-UNDERLAY-PEER
     type: ipv4
     remote_as: '65101'
     next_hop_self: true
     description: dc1-leaf1b
-    password: 4b21pAdCvWeAqpcKDFMdWw==
     maximum_routes: 12000
     send_community: all
     route_map_in: RM-MLAG-PEER-IN
-  - name: IPv4-UNDERLAY-PEERS
-    type: ipv4
-    password: 7x4B4rnJhZB438m9+BrBfQ==
-    maximum_routes: 12000
-    send_community: all
-  - name: EVPN-OVERLAY-PEERS
-    type: evpn
-    update_source: Loopback0
-    bfd: true
-    password: Q4fqtbqcZ7oQuKfuWtNGRQ==
-    send_community: all
-    maximum_routes: 0
-    ebgp_multihop: 3
-  address_family_ipv4:
-    peer_groups:
-    - name: MLAG-IPv4-UNDERLAY-PEER
-      activate: true
-    - name: IPv4-UNDERLAY-PEERS
-      activate: true
-    - name: EVPN-OVERLAY-PEERS
-      activate: false
-  neighbors:
-  - ip_address: 10.255.1.97
-    peer_group: MLAG-IPv4-UNDERLAY-PEER
-    peer: dc1-leaf1b
-    description: dc1-leaf1b
-  - ip_address: 10.255.255.0
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65100'
-    peer: dc1-spine1
-    description: dc1-spine1_Ethernet1
-  - ip_address: 10.255.255.2
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65100'
-    peer: dc1-spine2
-    description: dc1-spine2_Ethernet1
-  - ip_address: 10.255.0.1
-    peer_group: EVPN-OVERLAY-PEERS
-    peer: dc1-spine1
-    description: dc1-spine1
-    remote_as: '65100'
-  - ip_address: 10.255.0.2
-    peer_group: EVPN-OVERLAY-PEERS
-    peer: dc1-spine2
-    description: dc1-spine2
-    remote_as: '65100'
-  redistribute_routes:
-  - source_protocol: connected
-    route_map: RM-CONN-2-BGP
   address_family_evpn:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
       activate: true
+  address_family_ipv4:
+    peer_groups:
+    - name: EVPN-OVERLAY-PEERS
+      activate: false
+    - name: MLAG-IPv4-UNDERLAY-PEER
+      activate: true
   vrfs:
   - name: VRF10
-    router_id: 10.255.0.3
-    rd: 10.255.0.3:10
+    router_id: 10.255.1.13
+    rd: 10.255.1.13:10
     route_targets:
       import:
       - address_family: evpn
@@ -88,11 +51,11 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
     neighbors:
-    - ip_address: 10.255.1.97
+    - ip_address: 10.255.14.21
       peer_group: MLAG-IPv4-UNDERLAY-PEER
   - name: VRF11
-    router_id: 10.255.0.3
-    rd: 10.255.0.3:11
+    router_id: 10.255.1.13
+    rd: 10.255.1.13:11
     route_targets:
       import:
       - address_family: evpn
@@ -105,12 +68,12 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
     neighbors:
-    - ip_address: 10.255.1.97
+    - ip_address: 10.255.14.21
       peer_group: MLAG-IPv4-UNDERLAY-PEER
   vlans:
   - id: 11
     tenant: TENANT1
-    rd: 10.255.0.3:10011
+    rd: 10.255.1.13:10011
     route_targets:
       both:
       - 10011:10011
@@ -118,7 +81,7 @@ router_bgp:
     - learned
   - id: 12
     tenant: TENANT1
-    rd: 10.255.0.3:10012
+    rd: 10.255.1.13:10012
     route_targets:
       both:
       - 10012:10012
@@ -126,7 +89,7 @@ router_bgp:
     - learned
   - id: 21
     tenant: TENANT1
-    rd: 10.255.0.3:10021
+    rd: 10.255.1.13:10021
     route_targets:
       both:
       - 10021:10021
@@ -134,7 +97,7 @@ router_bgp:
     - learned
   - id: 22
     tenant: TENANT1
-    rd: 10.255.0.3:10022
+    rd: 10.255.1.13:10022
     route_targets:
       both:
       - 10022:10022
@@ -142,7 +105,7 @@ router_bgp:
     - learned
   - id: 3401
     tenant: TENANT1
-    rd: 10.255.0.3:13401
+    rd: 10.255.1.13:13401
     route_targets:
       both:
       - 13401:13401
@@ -150,7 +113,7 @@ router_bgp:
     - learned
   - id: 3402
     tenant: TENANT1
-    rd: 10.255.0.3:13402
+    rd: 10.255.1.13:13402
     route_targets:
       both:
       - 13402:13402
@@ -177,9 +140,6 @@ vlan_internal_order:
   range:
     beginning: 1006
     ending: 1199
-ip_name_servers:
-- ip_address: 192.168.1.1
-  vrf: MGMT
 spanning_tree:
   mode: mstp
   mst_instances:
@@ -259,14 +219,16 @@ vlan_interfaces:
 - name: Vlan4093
   description: MLAG_PEER_L3_PEERING
   shutdown: false
-  mtu: 1500
-  ip_address: 10.255.1.96/31
+  mtu: 9216
+  ip_address: 10.255.14.20/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
 - name: Vlan4094
   description: MLAG_PEER
   shutdown: false
-  ip_address: 10.255.1.64/31
+  ip_address: 10.255.13.20/31
   no_autostate: true
-  mtu: 1500
+  mtu: 9216
 - name: Vlan11
   tenant: TENANT1
   description: VRF10_VLAN11
@@ -285,8 +247,8 @@ vlan_interfaces:
   shutdown: false
   description: 'MLAG_PEER_L3_iBGP: vrf VRF10'
   vrf: VRF10
-  mtu: 1500
-  ip_address: 10.255.1.96/31
+  mtu: 9216
+  ip_address: 10.255.14.20/31
 - name: Vlan21
   tenant: TENANT1
   description: VRF11_VLAN21
@@ -305,24 +267,24 @@ vlan_interfaces:
   shutdown: false
   description: 'MLAG_PEER_L3_iBGP: vrf VRF11'
   vrf: VRF11
-  mtu: 1500
-  ip_address: 10.255.1.96/31
+  mtu: 9216
+  ip_address: 10.255.14.20/31
 port_channel_interfaces:
-- name: Port-Channel3
-  description: MLAG_PEER_dc1-leaf1b_Po3
+- name: Port-Channel47
+  description: MLAG_PEER_dc1-leaf1b_Po47
   type: switched
   shutdown: false
   mode: trunk
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
-- name: Port-Channel8
-  description: DC1-LEAF1C_Po1
+- name: Port-Channel43
+  description: DC1-LEAF1C_Po47
   type: switched
   shutdown: false
   mode: trunk
   vlans: 11-12,21-22,3401-3402
-  mlag: 8
+  mlag: 43
 - name: Port-Channel5
   description: dc1-leaf1-server1_PortChannel dc1-leaf1-server1
   type: switched
@@ -333,54 +295,69 @@ port_channel_interfaces:
   spanning_tree_portfast: edge
   mlag: 5
 ethernet_interfaces:
-- name: Ethernet3
+- name: Ethernet47
   peer: dc1-leaf1b
-  peer_interface: Ethernet3
+  peer_interface: Ethernet47
   peer_type: mlag_peer
-  description: MLAG_PEER_dc1-leaf1b_Ethernet3
+  description: MLAG_PEER_dc1-leaf1b_Ethernet47
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 3
+    id: 47
     mode: active
-- name: Ethernet4
+- name: Ethernet48
   peer: dc1-leaf1b
-  peer_interface: Ethernet4
+  peer_interface: Ethernet48
   peer_type: mlag_peer
-  description: MLAG_PEER_dc1-leaf1b_Ethernet4
+  description: MLAG_PEER_dc1-leaf1b_Ethernet48
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 3
+    id: 47
     mode: active
-- name: Ethernet1
-  peer: dc1-spine1
-  peer_interface: Ethernet1
-  peer_type: spine
-  description: P2P_LINK_TO_DC1-SPINE1_Ethernet1
-  shutdown: false
-  mtu: 1500
-  type: routed
-  ip_address: 10.255.255.1/31
-- name: Ethernet2
-  peer: dc1-spine2
-  peer_interface: Ethernet1
-  peer_type: spine
-  description: P2P_LINK_TO_DC1-SPINE2_Ethernet1
-  shutdown: false
-  mtu: 1500
-  type: routed
-  ip_address: 10.255.255.3/31
-- name: Ethernet8
+- name: Ethernet43
   peer: dc1-leaf1c
-  peer_interface: Ethernet1
+  peer_interface: Ethernet47
   peer_type: l2leaf
-  description: DC1-LEAF1C_Ethernet1
+  description: DC1-LEAF1C_Ethernet47
   shutdown: false
   type: port-channel-member
   channel_group:
-    id: 8
+    id: 43
     mode: active
+- name: Ethernet44
+  peer: dc2-leaf1a
+  peer_interface: Ethernet44
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC2-LEAF1A_Ethernet44
+  shutdown: false
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.22.120/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
+- name: Ethernet45
+  peer: dc2-leaf1b
+  peer_interface: Ethernet44
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC2-LEAF1B_Ethernet44
+  shutdown: false
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.22.84/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
+- name: Ethernet46
+  peer: dc1-leaf1b
+  peer_interface: Ethernet46
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC1-LEAF1B_Ethernet46
+  shutdown: false
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.12.21/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
 - name: Ethernet5
   peer: dc1-leaf1-server1
   peer_interface: PCI1
@@ -394,50 +371,43 @@ ethernet_interfaces:
 mlag_configuration:
   domain_id: DC1_L3_LEAF1
   local_interface: Vlan4094
-  peer_address: 10.255.1.65
-  peer_link: Port-Channel3
+  peer_address: 10.255.13.21
+  peer_link: Port-Channel47
   reload_delay_mlag: '300'
   reload_delay_non_mlag: '330'
-route_maps:
-- name: RM-MLAG-PEER-IN
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    set:
-    - origin incomplete
-    description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
-- name: RM-CONN-2-BGP
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
   shutdown: false
-  ip_address: 10.255.0.3/32
+  ip_address: 10.255.1.13/32
+  ospf_area: 0.0.0.0
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
-  ip_address: 10.255.1.3/32
+  ip_address: 10.255.11.13/32
+  ospf_area: 0.0.0.0
 - name: Loopback10
   description: VRF10_VTEP_DIAGNOSTICS
   shutdown: false
   vrf: VRF10
-  ip_address: 10.255.10.3/32
+  ip_address: 10.255.10.13/32
 - name: Loopback11
   description: VRF11_VTEP_DIAGNOSTICS
   shutdown: false
   vrf: VRF11
-  ip_address: 10.255.11.3/32
-prefix_lists:
-- name: PL-LOOPBACKS-EVPN-OVERLAY
-  sequence_numbers:
-  - sequence: 10
-    action: permit 10.255.0.0/27 eq 32
-  - sequence: 20
-    action: permit 10.255.1.0/27 eq 32
+  ip_address: 10.255.11.13/32
+router_ospf:
+  process_ids:
+  - id: 100
+    passive_interface_default: true
+    router_id: 10.255.1.13
+    max_lsa: 12000
+    no_passive_interfaces:
+    - Ethernet44
+    - Ethernet45
+    - Ethernet46
+    - Vlan4093
+    bfd_enable: false
 router_bfd:
   multihop:
     interval: 300
@@ -446,6 +416,14 @@ router_bfd:
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:00:99
+route_maps:
+- name: RM-MLAG-PEER-IN
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    set:
+    - origin incomplete
+    description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
 vxlan_interface:
   Vxlan1:
     description: dc1-leaf1a_VTEP
@@ -473,13 +451,6 @@ vxlan_interface:
         vni: 11
 virtual_source_nat_vrfs:
 - name: VRF10
-  ip_address: 10.255.10.3
+  ip_address: 10.255.10.13
 - name: VRF11
-  ip_address: 10.255.11.3
-ntp:
-  local_interface:
-    name: Management1
-    vrf: MGMT
-  servers:
-  - name: 0.pool.ntp.org
-    vrf: MGMT
+  ip_address: 10.255.11.13
