--- a/test/single-dc-l3ls/intended/structured_configs/dc2-leaf1a.yml
+++ b/test/single-dc-l3ls/intended/structured_configs/dc2-leaf1a.yml
@@ -1,8 +1,8 @@
-hostname: dc1-leaf2b
+hostname: dc2-leaf1a
 is_deployed: true
 router_bgp:
-  as: '65102'
-  router_id: 10.255.0.6
+  as: '65101'
+  router_id: 10.255.2.23
   bgp:
     default:
       ipv4_unicast: false
@@ -10,72 +10,35 @@ router_bgp:
     paths: 4
     ecmp: 4
   peer_groups:
-  - name: MLAG-IPv4-UNDERLAY-PEER
-    type: ipv4
-    remote_as: '65102'
-    next_hop_self: true
-    description: dc1-leaf2a
-    password: 4b21pAdCvWeAqpcKDFMdWw==
-    maximum_routes: 12000
-    send_community: all
-    route_map_in: RM-MLAG-PEER-IN
-  - name: IPv4-UNDERLAY-PEERS
-    type: ipv4
-    password: 7x4B4rnJhZB438m9+BrBfQ==
-    maximum_routes: 12000
-    send_community: all
   - name: EVPN-OVERLAY-PEERS
     type: evpn
     update_source: Loopback0
     bfd: true
-    password: Q4fqtbqcZ7oQuKfuWtNGRQ==
     send_community: all
     maximum_routes: 0
     ebgp_multihop: 3
-  address_family_ipv4:
-    peer_groups:
-    - name: MLAG-IPv4-UNDERLAY-PEER
-      activate: true
-    - name: IPv4-UNDERLAY-PEERS
-      activate: true
-    - name: EVPN-OVERLAY-PEERS
-      activate: false
-  neighbors:
-  - ip_address: 10.255.1.100
-    peer_group: MLAG-IPv4-UNDERLAY-PEER
-    peer: dc1-leaf2a
-    description: dc1-leaf2a
-  - ip_address: 10.255.255.12
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65100'
-    peer: dc1-spine1
-    description: dc1-spine1_Ethernet4
-  - ip_address: 10.255.255.14
-    peer_group: IPv4-UNDERLAY-PEERS
-    remote_as: '65100'
-    peer: dc1-spine2
-    description: dc1-spine2_Ethernet4
-  - ip_address: 10.255.0.1
-    peer_group: EVPN-OVERLAY-PEERS
-    peer: dc1-spine1
-    description: dc1-spine1
-    remote_as: '65100'
-  - ip_address: 10.255.0.2
-    peer_group: EVPN-OVERLAY-PEERS
-    peer: dc1-spine2
-    description: dc1-spine2
-    remote_as: '65100'
-  redistribute_routes:
-  - source_protocol: connected
-    route_map: RM-CONN-2-BGP
+  - name: MLAG-IPv4-UNDERLAY-PEER
+    type: ipv4
+    remote_as: '65101'
+    next_hop_self: true
+    description: dc2-leaf1b
+    maximum_routes: 12000
+    send_community: all
+    route_map_in: RM-MLAG-PEER-IN
   address_family_evpn:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
       activate: true
+  address_family_ipv4:
+    peer_groups:
+    - name: EVPN-OVERLAY-PEERS
+      activate: false
+    - name: MLAG-IPv4-UNDERLAY-PEER
+      activate: true
   vrfs:
   - name: VRF10
-    router_id: 10.255.0.6
-    rd: 10.255.0.6:10
+    router_id: 10.255.2.23
+    rd: 10.255.2.23:10
     route_targets:
       import:
       - address_family: evpn
@@ -88,11 +51,11 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
     neighbors:
-    - ip_address: 10.255.1.100
+    - ip_address: 10.255.24.41
       peer_group: MLAG-IPv4-UNDERLAY-PEER
   - name: VRF11
-    router_id: 10.255.0.6
-    rd: 10.255.0.6:11
+    router_id: 10.255.2.23
+    rd: 10.255.2.23:11
     route_targets:
       import:
       - address_family: evpn
@@ -105,12 +68,12 @@ router_bgp:
     redistribute_routes:
     - source_protocol: connected
     neighbors:
-    - ip_address: 10.255.1.100
+    - ip_address: 10.255.24.41
       peer_group: MLAG-IPv4-UNDERLAY-PEER
   vlans:
   - id: 11
     tenant: TENANT1
-    rd: 10.255.0.6:10011
+    rd: 10.255.2.23:10011
     route_targets:
       both:
       - 10011:10011
@@ -118,7 +81,7 @@ router_bgp:
     - learned
   - id: 12
     tenant: TENANT1
-    rd: 10.255.0.6:10012
+    rd: 10.255.2.23:10012
     route_targets:
       both:
       - 10012:10012
@@ -126,7 +89,7 @@ router_bgp:
     - learned
   - id: 21
     tenant: TENANT1
-    rd: 10.255.0.6:10021
+    rd: 10.255.2.23:10021
     route_targets:
       both:
       - 10021:10021
@@ -134,7 +97,7 @@ router_bgp:
     - learned
   - id: 22
     tenant: TENANT1
-    rd: 10.255.0.6:10022
+    rd: 10.255.2.23:10022
     route_targets:
       both:
       - 10022:10022
@@ -142,7 +105,7 @@ router_bgp:
     - learned
   - id: 3401
     tenant: TENANT1
-    rd: 10.255.0.6:13401
+    rd: 10.255.2.23:13401
     route_targets:
       both:
       - 13401:13401
@@ -150,7 +113,7 @@ router_bgp:
     - learned
   - id: 3402
     tenant: TENANT1
-    rd: 10.255.0.6:13402
+    rd: 10.255.2.23:13402
     route_targets:
       both:
       - 13402:13402
@@ -177,9 +140,6 @@ vlan_internal_order:
   range:
     beginning: 1006
     ending: 1199
-ip_name_servers:
-- ip_address: 192.168.1.1
-  vrf: MGMT
 spanning_tree:
   mode: mstp
   mst_instances:
@@ -209,7 +169,7 @@ management_interfaces:
   description: oob_management
   shutdown: false
   vrf: MGMT
-  ip_address: 172.16.1.104/24
+  ip_address: 172.16.2.101/24
   gateway: 172.16.1.1
   type: oob
 management_api_http:
@@ -259,14 +219,16 @@ vlan_interfaces:
 - name: Vlan4093
   description: MLAG_PEER_L3_PEERING
   shutdown: false
-  mtu: 1500
-  ip_address: 10.255.1.101/31
+  mtu: 9216
+  ip_address: 10.255.24.40/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
 - name: Vlan4094
   description: MLAG_PEER
   shutdown: false
-  ip_address: 10.255.1.69/31
+  ip_address: 10.255.23.40/31
   no_autostate: true
-  mtu: 1500
+  mtu: 9216
 - name: Vlan11
   tenant: TENANT1
   description: VRF10_VLAN11
@@ -285,8 +247,8 @@ vlan_interfaces:
   shutdown: false
   description: 'MLAG_PEER_L3_iBGP: vrf VRF10'
   vrf: VRF10
-  mtu: 1500
-  ip_address: 10.255.1.101/31
+  mtu: 9216
+  ip_address: 10.255.24.40/31
 - name: Vlan21
   tenant: TENANT1
   description: VRF11_VLAN21
@@ -305,139 +267,128 @@ vlan_interfaces:
   shutdown: false
   description: 'MLAG_PEER_L3_iBGP: vrf VRF11'
   vrf: VRF11
-  mtu: 1500
-  ip_address: 10.255.1.101/31
+  mtu: 9216
+  ip_address: 10.255.24.40/31
 port_channel_interfaces:
-- name: Port-Channel3
-  description: MLAG_PEER_dc1-leaf2a_Po3
+- name: Port-Channel47
+  description: MLAG_PEER_dc2-leaf1b_Po47
   type: switched
   shutdown: false
   mode: trunk
   trunk_groups:
   - LEAF_PEER_L3
   - MLAG
-- name: Port-Channel8
-  description: DC1-LEAF2C_Po1
+- name: Port-Channel43
+  description: DC2-LEAF1C_Po47
   type: switched
   shutdown: false
   mode: trunk
   vlans: 11-12,21-22,3401-3402
-  mlag: 8
-- name: Port-Channel5
-  description: dc1-leaf2-server1_PortChannel dc1-leaf2-server1
-  type: switched
-  shutdown: false
-  mode: trunk
-  vlans: 11-12,21-22
-  native_vlan: 4092
-  spanning_tree_portfast: edge
-  mlag: 5
+  mlag: 43
 ethernet_interfaces:
-- name: Ethernet3
-  peer: dc1-leaf2a
-  peer_interface: Ethernet3
+- name: Ethernet47
+  peer: dc2-leaf1b
+  peer_interface: Ethernet47
   peer_type: mlag_peer
-  description: MLAG_PEER_dc1-leaf2a_Ethernet3
+  description: MLAG_PEER_dc2-leaf1b_Ethernet47
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 3
+    id: 47
     mode: active
-- name: Ethernet4
-  peer: dc1-leaf2a
-  peer_interface: Ethernet4
+- name: Ethernet48
+  peer: dc2-leaf1b
+  peer_interface: Ethernet48
   peer_type: mlag_peer
-  description: MLAG_PEER_dc1-leaf2a_Ethernet4
+  description: MLAG_PEER_dc2-leaf1b_Ethernet48
   type: port-channel-member
   shutdown: false
   channel_group:
-    id: 3
+    id: 47
     mode: active
-- name: Ethernet1
-  peer: dc1-spine1
-  peer_interface: Ethernet4
-  peer_type: spine
-  description: P2P_LINK_TO_DC1-SPINE1_Ethernet4
-  shutdown: false
-  mtu: 1500
-  type: routed
-  ip_address: 10.255.255.13/31
-- name: Ethernet2
-  peer: dc1-spine2
-  peer_interface: Ethernet4
-  peer_type: spine
-  description: P2P_LINK_TO_DC1-SPINE2_Ethernet4
-  shutdown: false
-  mtu: 1500
-  type: routed
-  ip_address: 10.255.255.15/31
-- name: Ethernet8
-  peer: dc1-leaf2c
-  peer_interface: Ethernet2
+- name: Ethernet43
+  peer: dc2-leaf1c
+  peer_interface: Ethernet47
   peer_type: l2leaf
-  description: DC1-LEAF2C_Ethernet2
+  description: DC2-LEAF1C_Ethernet47
   shutdown: false
   type: port-channel-member
   channel_group:
-    id: 8
+    id: 43
     mode: active
-- name: Ethernet5
-  peer: dc1-leaf2-server1
-  peer_interface: PCI2
-  peer_type: server
-  description: dc1-leaf2-server1_PCI2
+- name: Ethernet44
+  peer: dc1-leaf1a
+  peer_interface: Ethernet44
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC1-LEAF1A_Ethernet44
   shutdown: false
-  type: port-channel-member
-  channel_group:
-    id: 5
-    mode: active
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.22.121/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
+- name: Ethernet45
+  peer: dc1-leaf1b
+  peer_interface: Ethernet44
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC1-LEAF1B_Ethernet44
+  shutdown: false
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.22.123/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
+- name: Ethernet46
+  peer: dc2-leaf1b
+  peer_interface: Ethernet46
+  peer_type: l3leaf
+  description: P2P_LINK_TO_DC2-LEAF1B_Ethernet46
+  shutdown: false
+  mtu: 9216
+  type: routed
+  ip_address: 10.255.22.125/31
+  ospf_network_point_to_point: true
+  ospf_area: 0.0.0.0
 mlag_configuration:
-  domain_id: DC1_L3_LEAF2
+  domain_id: DC2_L3_LEAF1
   local_interface: Vlan4094
-  peer_address: 10.255.1.68
-  peer_link: Port-Channel3
+  peer_address: 10.255.23.41
+  peer_link: Port-Channel47
   reload_delay_mlag: '300'
   reload_delay_non_mlag: '330'
-route_maps:
-- name: RM-MLAG-PEER-IN
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    set:
-    - origin incomplete
-    description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
-- name: RM-CONN-2-BGP
-  sequence_numbers:
-  - sequence: 10
-    type: permit
-    match:
-    - ip address prefix-list PL-LOOPBACKS-EVPN-OVERLAY
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
   shutdown: false
-  ip_address: 10.255.0.6/32
+  ip_address: 10.255.2.23/32
+  ospf_area: 0.0.0.0
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
-  ip_address: 10.255.1.5/32
+  ip_address: 10.255.21.23/32
+  ospf_area: 0.0.0.0
 - name: Loopback10
   description: VRF10_VTEP_DIAGNOSTICS
   shutdown: false
   vrf: VRF10
-  ip_address: 10.255.10.6/32
+  ip_address: 10.255.10.23/32
 - name: Loopback11
   description: VRF11_VTEP_DIAGNOSTICS
   shutdown: false
   vrf: VRF11
-  ip_address: 10.255.11.6/32
-prefix_lists:
-- name: PL-LOOPBACKS-EVPN-OVERLAY
-  sequence_numbers:
-  - sequence: 10
-    action: permit 10.255.0.0/27 eq 32
-  - sequence: 20
-    action: permit 10.255.1.0/27 eq 32
+  ip_address: 10.255.11.23/32
+router_ospf:
+  process_ids:
+  - id: 100
+    passive_interface_default: true
+    router_id: 10.255.2.23
+    max_lsa: 12000
+    no_passive_interfaces:
+    - Ethernet44
+    - Ethernet45
+    - Ethernet46
+    - Vlan4093
+    bfd_enable: false
 router_bfd:
   multihop:
     interval: 300
@@ -446,9 +397,17 @@ router_bfd:
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:00:99
+route_maps:
+- name: RM-MLAG-PEER-IN
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    set:
+    - origin incomplete
+    description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
 vxlan_interface:
   Vxlan1:
-    description: dc1-leaf2b_VTEP
+    description: dc2-leaf1a_VTEP
     vxlan:
       udp_port: 4789
       source_interface: Loopback1
@@ -473,13 +432,6 @@ vxlan_interface:
         vni: 11
 virtual_source_nat_vrfs:
 - name: VRF10
-  ip_address: 10.255.10.6
+  ip_address: 10.255.10.23
 - name: VRF11
-  ip_address: 10.255.11.6
-ntp:
-  local_interface:
-    name: Management1
-    vrf: MGMT
-  servers:
-  - name: 0.pool.ntp.org
-    vrf: MGMT
+  ip_address: 10.255.11.23
