--- a/test/single-dc-l3ls/group_vars/NETWORK_SERVICES.yml
+++ b/test/single-dc-l3ls/group_vars/NETWORK_SERVICES.yml
@@ -11,12 +11,12 @@ tenants:
         vrf_vni: 10
         # Enable VTEP Network diagnostics
         # This will create a loopback with virtual source-nat enable to perform diagnostics from the switch.
-        vtep_diagnostic:
-          # Loopback interface number
-          loopback: 10
-          # Loopback ip range, a unique ip is derived from this ranged and assigned
-          # to each l3 leaf based on it's unique id.
-          loopback_ip_range: 10.255.10.0/27
+        # vtep_diagnostic:
+        #   # Loopback interface number
+        #   loopback: 10
+        #   # Loopback ip range, a unique ip is derived from this ranged and assigned
+        #   # to each l3 leaf based on it's unique id.
+        #   loopback_ip_range: 10.255.10.0/27
         svis:
           # SVI definitions.
           - id: 11
@@ -31,9 +31,9 @@ tenants:
             ip_address_virtual: 10.10.12.1/24
       - name: VRF11
         vrf_vni: 11
-        vtep_diagnostic:
-          loopback: 11
-          loopback_ip_range: 10.255.11.0/27
+        # vtep_diagnostic:
+        #   loopback: 11
+        #   loopback_ip_range: 10.255.11.0/27
         svis:
           - id: 21
             name: VRF11_VLAN21
