--- a/test/single-dc-l3ls/intended/configs/dc1-leaf1b.cfg
+++ b/test/single-dc-l3ls/intended/configs/dc1-leaf1b.cfg
@@ -138,26 +138,14 @@ interface Ethernet48
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
-   ip address 10.255.1.14/32
+   ip address 10.255.1.12/32
    ip ospf area 0.0.0.0
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
-   ip address 10.255.11.13/32
+   ip address 10.255.11.11/32
    ip ospf area 0.0.0.0
-!
-interface Loopback10
-   description VRF10_VTEP_DIAGNOSTICS
-   no shutdown
-   vrf VRF10
-   ip address 10.255.10.14/32
-!
-interface Loopback11
-   description VRF11_VTEP_DIAGNOSTICS
-   no shutdown
-   vrf VRF11
-   ip address 10.255.11.14/32
 !
 interface Management1
    description oob_management
@@ -234,9 +222,6 @@ interface Vxlan1
 !
 ip virtual-router mac-address 00:1c:73:00:00:99
 !
-ip address virtual source-nat vrf VRF10 address 10.255.10.14
-ip address virtual source-nat vrf VRF11 address 10.255.11.14
-!
 ip routing
 no ip routing vrf MGMT
 ip routing vrf VRF10
@@ -260,8 +245,9 @@ router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65101
-   router-id 10.255.1.14
+   router-id 10.255.1.12
    maximum-paths 4 ecmp 4
+   update wait-install
    no bgp default ipv4-unicast
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
@@ -278,32 +264,32 @@ router bgp 65101
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
    !
    vlan 11
-      rd 10.255.1.14:10011
+      rd 10.255.1.12:10011
       route-target both 10011:10011
       redistribute learned
    !
    vlan 12
-      rd 10.255.1.14:10012
+      rd 10.255.1.12:10012
       route-target both 10012:10012
       redistribute learned
    !
    vlan 21
-      rd 10.255.1.14:10021
+      rd 10.255.1.12:10021
       route-target both 10021:10021
       redistribute learned
    !
    vlan 22
-      rd 10.255.1.14:10022
+      rd 10.255.1.12:10022
       route-target both 10022:10022
       redistribute learned
    !
    vlan 3401
-      rd 10.255.1.14:13401
+      rd 10.255.1.12:13401
       route-target both 13401:13401
       redistribute learned
    !
    vlan 3402
-      rd 10.255.1.14:13402
+      rd 10.255.1.12:13402
       route-target both 13402:13402
       redistribute learned
    !
@@ -315,23 +301,25 @@ router bgp 65101
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
    !
    vrf VRF10
-      rd 10.255.1.14:10
+      rd 10.255.1.12:10
       route-target import evpn 10:10
       route-target export evpn 10:10
-      router-id 10.255.1.14
+      router-id 10.255.1.12
+      update wait-install
       neighbor 10.255.14.20 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
    !
    vrf VRF11
-      rd 10.255.1.14:11
+      rd 10.255.1.12:11
       route-target import evpn 11:11
       route-target export evpn 11:11
-      router-id 10.255.1.14
+      router-id 10.255.1.12
+      update wait-install
       neighbor 10.255.14.20 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
 router ospf 100
-   router-id 10.255.1.14
+   router-id 10.255.1.12
    passive-interface default
    no passive-interface Ethernet44
    no passive-interface Ethernet45
