--- a/test/single-dc-l3ls/group_vars/DC1.yml
+++ b/test/single-dc-l3ls/group_vars/DC1.yml
@@ -30,25 +30,25 @@ mgmt_gateway: 172.16.1.1
 # L3 Leaf switch group
 l3leaf:
   defaults:
-    # Set the relevant platform as each platform has different default values in Ansible AVD
-    platform: vEOS-lab
-    # Pool of IPv4 addresses to configure interface Loopback0 used for BGP EVPN sessions
+  #   # Set the relevant platform as each platform has different default values in Ansible AVD
+  #   platform: vEOS-lab
+  #   # Pool of IPv4 addresses to configure interface Loopback0 used for BGP EVPN sessions
     loopback_ipv4_pool: 10.255.1.0/27
-    # Offset all assigned loopback IP addresses.
-    # Required when the < loopback_ipv4_pool > is same for 2 different node_types (like spine and l3leaf) to avoid over-lapping IPs.
-    # For example, set the minimum offset l3leaf.defaults.loopback_ipv4_offset: < total # spine switches > or vice versa.
-    loopback_ipv4_offset: 2
-    # Definition of pool of IPs to be used as Virtual Tunnel EndPoint (VXLAN origin and destination IPs)
+  #   # Offset all assigned loopback IP addresses.
+  #   # Required when the < loopback_ipv4_pool > is same for 2 different node_types (like spine and l3leaf) to avoid over-lapping IPs.
+  #   # For example, set the minimum offset l3leaf.defaults.loopback_ipv4_offset: < total # spine switches > or vice versa.
+  #   loopback_ipv4_offset: 2
+  #   # Definition of pool of IPs to be used as Virtual Tunnel EndPoint (VXLAN origin and destination IPs)
     vtep_loopback_ipv4_pool: 10.255.11.0/24
-    # Ansible hostname of the devices used to establish neighborship (IP assignments and BGP peering)
-    #uplink_switches: ['dc2-leaf1a', 'dc2-leaf1b']
-    # Definition of pool of IPs to be used in P2P links
+  #   # Ansible hostname of the devices used to establish neighborship (IP assignments and BGP peering)
+  #   #uplink_switches: ['dc2-leaf1a', 'dc2-leaf1b']
+  #   # Definition of pool of IPs to be used in P2P links
     uplink_ipv4_pool: 10.255.12.0/24
-    # Definition of pool of IPs to be used for MLAG peer-link connectivity
+  #   # Definition of pool of IPs to be used for MLAG peer-link connectivity
     mlag_peer_ipv4_pool: 10.255.13.0/24
-    # iBGP Peering between MLAG peers
+  #   # iBGP Peering between MLAG peers
     mlag_peer_l3_ipv4_pool: 10.255.14.0/24
-    # Virtual router mac for VNIs assigned to Leaf switches in format xx:xx:xx:xx:xx:xx
+  #   # Virtual router mac for VNIs assigned to Leaf switches in format xx:xx:xx:xx:xx:xx
     virtual_router_mac_address: 00:1c:73:00:00:99
     spanning_tree_priority: 4096
     spanning_tree_mode: mstp
