--- a/test/single-dc-l3ls/intended/configs/dc2-leaf1a.cfg
+++ b/test/single-dc-l3ls/intended/configs/dc2-leaf1a.cfg
@@ -123,26 +123,14 @@ interface Ethernet48
 interface Loopback0
    description EVPN_Overlay_Peering
    no shutdown
-   ip address 10.255.2.23/32
+   ip address 10.255.2.21/32
    ip ospf area 0.0.0.0
 !
 interface Loopback1
    description VTEP_VXLAN_Tunnel_Source
    no shutdown
-   ip address 10.255.21.23/32
+   ip address 10.255.21.21/32
    ip ospf area 0.0.0.0
-!
-interface Loopback10
-   description VRF10_VTEP_DIAGNOSTICS
-   no shutdown
-   vrf VRF10
-   ip address 10.255.10.23/32
-!
-interface Loopback11
-   description VRF11_VTEP_DIAGNOSTICS
-   no shutdown
-   vrf VRF11
-   ip address 10.255.11.23/32
 !
 interface Management1
    description oob_management
@@ -219,9 +207,6 @@ interface Vxlan1
 !
 ip virtual-router mac-address 00:1c:73:00:00:99
 !
-ip address virtual source-nat vrf VRF10 address 10.255.10.23
-ip address virtual source-nat vrf VRF11 address 10.255.11.23
-!
 ip routing
 no ip routing vrf MGMT
 ip routing vrf VRF10
@@ -245,8 +230,9 @@ router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65101
-   router-id 10.255.2.23
+   router-id 10.255.2.21
    maximum-paths 4 ecmp 4
+   update wait-install
    no bgp default ipv4-unicast
    neighbor EVPN-OVERLAY-PEERS peer group
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
@@ -263,32 +249,32 @@ router bgp 65101
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
    !
    vlan 11
-      rd 10.255.2.23:10011
+      rd 10.255.2.21:10011
       route-target both 10011:10011
       redistribute learned
    !
    vlan 12
-      rd 10.255.2.23:10012
+      rd 10.255.2.21:10012
       route-target both 10012:10012
       redistribute learned
    !
    vlan 21
-      rd 10.255.2.23:10021
+      rd 10.255.2.21:10021
       route-target both 10021:10021
       redistribute learned
    !
    vlan 22
-      rd 10.255.2.23:10022
+      rd 10.255.2.21:10022
       route-target both 10022:10022
       redistribute learned
    !
    vlan 3401
-      rd 10.255.2.23:13401
+      rd 10.255.2.21:13401
       route-target both 13401:13401
       redistribute learned
    !
    vlan 3402
-      rd 10.255.2.23:13402
+      rd 10.255.2.21:13402
       route-target both 13402:13402
       redistribute learned
    !
@@ -300,23 +286,25 @@ router bgp 65101
       neighbor MLAG-IPv4-UNDERLAY-PEER activate
    !
    vrf VRF10
-      rd 10.255.2.23:10
+      rd 10.255.2.21:10
       route-target import evpn 10:10
       route-target export evpn 10:10
-      router-id 10.255.2.23
+      router-id 10.255.2.21
+      update wait-install
       neighbor 10.255.24.41 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
    !
    vrf VRF11
-      rd 10.255.2.23:11
+      rd 10.255.2.21:11
       route-target import evpn 11:11
       route-target export evpn 11:11
-      router-id 10.255.2.23
+      router-id 10.255.2.21
+      update wait-install
       neighbor 10.255.24.41 peer group MLAG-IPv4-UNDERLAY-PEER
       redistribute connected
 !
 router ospf 100
-   router-id 10.255.2.23
+   router-id 10.255.2.21
    passive-interface default
    no passive-interface Ethernet44
    no passive-interface Ethernet45
