--- a/test/single-dc-l3ls/intended/structured_configs/dc1-leaf1a.yml
+++ b/test/single-dc-l3ls/intended/structured_configs/dc1-leaf1a.yml
@@ -2,13 +2,15 @@ hostname: dc1-leaf1a
 is_deployed: true
 router_bgp:
   as: '65101'
-  router_id: 10.255.1.13
+  router_id: 10.255.1.11
   bgp:
     default:
       ipv4_unicast: false
   maximum_paths:
     paths: 4
     ecmp: 4
+  updates:
+    wait_install: true
   peer_groups:
   - name: EVPN-OVERLAY-PEERS
     type: evpn
@@ -37,8 +39,8 @@ router_bgp:
       activate: true
   vrfs:
   - name: VRF10
-    router_id: 10.255.1.13
-    rd: 10.255.1.13:10
+    router_id: 10.255.1.11
+    rd: 10.255.1.11:10
     route_targets:
       import:
       - address_family: evpn
@@ -53,9 +55,11 @@ router_bgp:
     neighbors:
     - ip_address: 10.255.14.21
       peer_group: MLAG-IPv4-UNDERLAY-PEER
+    updates:
+      wait_install: true
   - name: VRF11
-    router_id: 10.255.1.13
-    rd: 10.255.1.13:11
+    router_id: 10.255.1.11
+    rd: 10.255.1.11:11
     route_targets:
       import:
       - address_family: evpn
@@ -70,10 +74,12 @@ router_bgp:
     neighbors:
     - ip_address: 10.255.14.21
       peer_group: MLAG-IPv4-UNDERLAY-PEER
+    updates:
+      wait_install: true
   vlans:
   - id: 11
     tenant: TENANT1
-    rd: 10.255.1.13:10011
+    rd: 10.255.1.11:10011
     route_targets:
       both:
       - 10011:10011
@@ -81,7 +87,7 @@ router_bgp:
     - learned
   - id: 12
     tenant: TENANT1
-    rd: 10.255.1.13:10012
+    rd: 10.255.1.11:10012
     route_targets:
       both:
       - 10012:10012
@@ -89,7 +95,7 @@ router_bgp:
     - learned
   - id: 21
     tenant: TENANT1
-    rd: 10.255.1.13:10021
+    rd: 10.255.1.11:10021
     route_targets:
       both:
       - 10021:10021
@@ -97,7 +103,7 @@ router_bgp:
     - learned
   - id: 22
     tenant: TENANT1
-    rd: 10.255.1.13:10022
+    rd: 10.255.1.11:10022
     route_targets:
       both:
       - 10022:10022
@@ -105,7 +111,7 @@ router_bgp:
     - learned
   - id: 3401
     tenant: TENANT1
-    rd: 10.255.1.13:13401
+    rd: 10.255.1.11:13401
     route_targets:
       both:
       - 13401:13401
@@ -113,7 +119,7 @@ router_bgp:
     - learned
   - id: 3402
     tenant: TENANT1
-    rd: 10.255.1.13:13402
+    rd: 10.255.1.11:13402
     route_targets:
       both:
       - 13402:13402
@@ -379,28 +385,18 @@ loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
   shutdown: false
-  ip_address: 10.255.1.13/32
+  ip_address: 10.255.1.11/32
   ospf_area: 0.0.0.0
 - name: Loopback1
   description: VTEP_VXLAN_Tunnel_Source
   shutdown: false
-  ip_address: 10.255.11.13/32
+  ip_address: 10.255.11.11/32
   ospf_area: 0.0.0.0
-- name: Loopback10
-  description: VRF10_VTEP_DIAGNOSTICS
-  shutdown: false
-  vrf: VRF10
-  ip_address: 10.255.10.13/32
-- name: Loopback11
-  description: VRF11_VTEP_DIAGNOSTICS
-  shutdown: false
-  vrf: VRF11
-  ip_address: 10.255.11.13/32
 router_ospf:
   process_ids:
   - id: 100
     passive_interface_default: true
-    router_id: 10.255.1.13
+    router_id: 10.255.1.11
     max_lsa: 12000
     no_passive_interfaces:
     - Ethernet44
@@ -449,8 +445,3 @@ vxlan_interface:
         vni: 10
       - name: VRF11
         vni: 11
-virtual_source_nat_vrfs:
-- name: VRF10
-  ip_address: 10.255.10.13
-- name: VRF11
-  ip_address: 10.255.11.13
