--- a/test/device-type/group_vars/FABRIC.yml
+++ b/test/device-type/group_vars/FABRIC.yml
@@ -20,7 +20,7 @@ fabric_name: FABRIC
 
 # Define underlay and overlay routing protocol to be used
 underlay_routing_protocol: ospf
-overlay_routing_protocol: ebgp
+overlay_routing_protocol: ibgp
 
 # Local users
 local_users:
