--- a/test/device-type/intended/configs/dc2-leaf1b.cfg
+++ b/test/device-type/intended/configs/dc2-leaf1b.cfg
@@ -212,6 +212,8 @@ no ip routing vrf MGMT
 ip routing vrf VRF10
 ip routing vrf VRF11
 !
+ip extcommunity-list ECL-EVPN-SOO permit soo 10.255.21.21:1
+!
 mlag configuration
    domain-id DC2_L3_LEAF1
    local-interface Vlan4094
@@ -221,6 +223,14 @@ mlag configuration
    reload-delay non-mlag 330
 !
 ip route vrf MGMT 0.0.0.0/0 172.16.1.1
+!
+route-map RM-EVPN-SOO-IN deny 10
+   match extcommunity ECL-EVPN-SOO
+!
+route-map RM-EVPN-SOO-IN permit 20
+!
+route-map RM-EVPN-SOO-OUT permit 10
+   set extcommunity soo 10.255.21.21:1 additive
 !
 route-map RM-MLAG-PEER-IN permit 10
    description Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
@@ -235,9 +245,9 @@ router bgp 65101
    update wait-install
    no bgp default ipv4-unicast
    neighbor EVPN-OVERLAY-PEERS peer group
+   neighbor EVPN-OVERLAY-PEERS remote-as 65101
    neighbor EVPN-OVERLAY-PEERS update-source Loopback0
    neighbor EVPN-OVERLAY-PEERS bfd
-   neighbor EVPN-OVERLAY-PEERS ebgp-multihop 3
    neighbor EVPN-OVERLAY-PEERS send-community
    neighbor EVPN-OVERLAY-PEERS maximum-routes 0
    neighbor MLAG-IPv4-UNDERLAY-PEER peer group
@@ -279,6 +289,8 @@ router bgp 65101
       redistribute learned
    !
    address-family evpn
+      neighbor EVPN-OVERLAY-PEERS route-map RM-EVPN-SOO-IN in
+      neighbor EVPN-OVERLAY-PEERS route-map RM-EVPN-SOO-OUT out
       neighbor EVPN-OVERLAY-PEERS activate
    !
    address-family ipv4
