--- a/test/device-type/intended/structured_configs/dc2-leaf1a.yml
+++ b/test/device-type/intended/structured_configs/dc2-leaf1a.yml
@@ -18,7 +18,7 @@ router_bgp:
     bfd: true
     send_community: all
     maximum_routes: 0
-    ebgp_multihop: 3
+    remote_as: '65101'
   - name: MLAG-IPv4-UNDERLAY-PEER
     type: ipv4
     remote_as: '65101'
@@ -31,6 +31,8 @@ router_bgp:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
       activate: true
+      route_map_in: RM-EVPN-SOO-IN
+      route_map_out: RM-EVPN-SOO-OUT
   address_family_ipv4:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
@@ -385,15 +387,31 @@ router_ospf:
     - Ethernet46
     - Vlan4093
     bfd_enable: false
+ip_extcommunity_lists:
+- name: ECL-EVPN-SOO
+  entries:
+  - type: permit
+    extcommunities: soo 10.255.21.21:1
 router_bfd:
   multihop:
     interval: 300
     min_rx: 300
     multiplier: 3
-ip_igmp_snooping:
-  globally_enabled: true
-ip_virtual_router_mac_address: 00:1c:73:00:00:99
 route_maps:
+- name: RM-EVPN-SOO-IN
+  sequence_numbers:
+  - sequence: 10
+    type: deny
+    match:
+    - extcommunity ECL-EVPN-SOO
+  - sequence: 20
+    type: permit
+- name: RM-EVPN-SOO-OUT
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    set:
+    - extcommunity soo 10.255.21.21:1 additive
 - name: RM-MLAG-PEER-IN
   sequence_numbers:
   - sequence: 10
@@ -401,6 +419,9 @@ route_maps:
     set:
     - origin incomplete
     description: Make routes learned over MLAG Peer-link less preferred on spines to ensure optimal routing
+ip_igmp_snooping:
+  globally_enabled: true
+ip_virtual_router_mac_address: 00:1c:73:00:00:99
 vxlan_interface:
   Vxlan1:
     description: dc2-leaf1a_VTEP
